--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">My Portfolio</h2>
-            <p>
-              I am a Software developer specialised in Frontend. I am currently on an internship program with HNG. I am excited to be a part of the HNG Program. I see it as an opportunity to apply my acquired knowledge and skills. Find out more 
+            <p class="section-body">
+              I am a Software developer specialised in Frontend. I am currently on an internship program with HNG, and I am excited to be part of the Program. I see it as an opportunity to apply my acquired knowledge and skills. Find out more 
               <a href="https://hng.tech/learn" data-testid="hngLink">here</a>
               <p><a href="https://keyword.dog" data-testid="hngLink">KeywordLink</a></p>
               <p><a href="https://scrapeanyweb.site" data-testid="scrapeanywebLink">Scrape website</a></p>
